BJS2-52621 Запрос на менторство: - исправление замечаний