@@ -1,8 +1,10 @@
 package school.faang.user_service.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import school.faang.user_service.dto.MentorshipRequestDto;
+import school.faang.user_service.dto.MentorshipResponseDto;
 import school.faang.user_service.dto.RejectionDto;
 import school.faang.user_service.entity.RequestStatus;
 import school.faang.user_service.entity.User;
@@ -16,57 +18,58 @@ import school.faang.user_service.repository.mentorship.MentorshipRequestReposito
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class MentorshipRequestServiceImpl implements MentorshipRequestService {
+    private static final int MIN_COUNT_OF_MONTHS_BETWEEN_REQUESTS = 3;
     private final MentorshipRequestRepository repository;
     private final UserService userService;
     private final MentorshipRequestMapper mapper;
     private final List<RequestFilter> requestFilters;
-    private static final int MIN_COUNT_OF_MONTHS_BETWEEN_REQUESTS = 3;
 
     @Override
-    public MentorshipRequestDto requestMentorship(MentorshipRequestDto mentorshipRequestDto) {
+    public MentorshipResponseDto requestMentorship(MentorshipRequestDto mentorshipRequestDto) {
+        log.info("MentorshipRequestServiceImpl: method #requestMentorship started with data: {}", mentorshipRequestDto);
         validateRequest(mentorshipRequestDto);
         MentorshipRequest mentorshipRequest = repository.create(
-                mentorshipRequestDto.getRequesterUserId(),
-                mentorshipRequestDto.getReceiverUserId(),
-                mentorshipRequestDto.getDescription());
-        return mapper.toMentorshipRequestDto(mentorshipRequest);
+                mentorshipRequestDto.requesterUserId(),
+                mentorshipRequestDto.receiverUserId(),
+                mentorshipRequestDto.description());
+        return mapper.toMentorshipResponseDto(mentorshipRequest);
     }
 
     @Override
-    public List<MentorshipRequestDto> getRequests(RequestFilterDto filters) {
+    public List<MentorshipResponseDto> getRequests(RequestFilterDto filters) {
+        log.info("MentorshipRequestServiceImpl: method #getRequests started with filters: {}", filters);
         Stream<MentorshipRequest> requestStream = repository.findAll().stream();
         return applyFilters(filters, requestStream);
     }
 
     @Override
     public void acceptRequest(long requestId) {
+        log.info("MentorshipRequestServiceImpl: method #acceptRequest started with requestId: {}", requestId);
         MentorshipRequest request = repository.findById(requestId).orElseThrow(
                 () -> new IllegalArgumentException(String.format("Запрос с id: %d отсутствует в базе данных", requestId)));
 
         User receiver = request.getReceiver();
         User requester = request.getRequester();
 
-        User requestersMentorByReceiverId = requester.getMentors().stream()
+        requester.getMentors().stream()
                 .filter(it -> receiver.getId().equals(it.getId()))
                 .findAny()
-                .orElse(null);
-        if (Objects.isNull(requestersMentorByReceiverId)) {
-            requester.getMentors().add(receiver);
-            request.setStatus(RequestStatus.ACCEPTED);
-        } else {
-            throw new IllegalArgumentException(String.format(
-                    "Получатель запроса с id: %d уже является ментором отправителя", requestId));
-        }
+                .orElseThrow(() -> new IllegalArgumentException(String.format(
+                        "Получатель запроса с id: %d уже является ментором отправителя", requestId)));
+
+        requester.getMentors().add(receiver);
+        request.setStatus(RequestStatus.ACCEPTED);
     }
 
     @Override
     public void rejectRequest(long requestId, RejectionDto rejection) {
+        log.info("MentorshipRequestServiceImpl: method #rejectRequest started with requestId: {} and data: {}", requestId, rejection);
         MentorshipRequest mentorshipRequest = repository.findById(requestId).orElseThrow(
                 () -> new IllegalArgumentException(String.format("В базе данных отсутствует запрос с id: %d", requestId)));
         mentorshipRequest.setStatus(RequestStatus.REJECTED);
@@ -74,10 +77,9 @@ public class MentorshipRequestServiceImpl implements MentorshipRequestService {
     }
 
     private void validateRequest(MentorshipRequestDto mentorshipRequestDto) {
-        validateDescription(mentorshipRequestDto);
         checkRequesterAndReceiverAreNotTheSamePerson(mentorshipRequestDto);
-        UserDto requesterUserDto = userService.findById(mentorshipRequestDto.getRequesterUserId());
-        UserDto receiverUserDto = userService.findById(mentorshipRequestDto.getReceiverUserId());
+        UserDto requesterUserDto = userService.findById(mentorshipRequestDto.requesterUserId());
+        UserDto receiverUserDto = userService.findById(mentorshipRequestDto.receiverUserId());
         MentorshipRequest lastMentorshipRequest = repository.findLatestRequest(
                 requesterUserDto.getUserId(), receiverUserDto.getUserId()).orElse(null);
         if (!Objects.isNull(lastMentorshipRequest)) {
@@ -85,28 +87,21 @@ public class MentorshipRequestServiceImpl implements MentorshipRequestService {
         }
     }
 
-    private void validateDescription(MentorshipRequestDto mentorshipRequestDto) {
-        if (mentorshipRequestDto.getDescription().isBlank()) {
-            throw new RuntimeException(String.format("Запрос от пользователя с id: %d не содержит описания." +
-                    "Описание запроса не может быть пустым.", mentorshipRequestDto.getRequesterUserId()));
-        }
-    }
-
     private void checkRequesterAndReceiverAreNotTheSamePerson(MentorshipRequestDto mentorshipRequestDto) {
-        if (mentorshipRequestDto.getRequesterUserId().equals(mentorshipRequestDto.getReceiverUserId())) {
+        if (mentorshipRequestDto.requesterUserId().equals(mentorshipRequestDto.receiverUserId())) {
             throw new IllegalArgumentException("Пользователь не может отправлять запрос сам себе!");
         }
     }
 
-    private List<MentorshipRequestDto> applyFilters(RequestFilterDto filters, Stream<MentorshipRequest> requestStream) {
+    private List<MentorshipResponseDto> applyFilters(RequestFilterDto filters, Stream<MentorshipRequest> requestStream) {
         for (RequestFilter filter : requestFilters) {
             if (filter.isApplicable(filters)) {
                 filter.apply(requestStream, filters);
             }
         }
         return requestStream
-                .map(mapper::toMentorshipRequestDto)
-                .collect(Collectors.toList());
+                .map(mapper::toMentorshipResponseDto)
+                .toList();
     }
 
     private void checkRequestIsNotTooOften(MentorshipRequest lastMentorshipRequest) {
